[package]
name = "sled-web"
version = "0.2.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "An extension of the `sled` crate that allows for accessing a `sled::Tree` via a client/server API using the `hyper` web framework crate."
readme = "README.md"
keywords = ["sled", "tree", "web", "server", "client"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/sled-web.git"
homepage = "https://github.com/mitchmindtree/sled-web"

[dependencies]
futures = "0.1"
http = "0.1"
hyper = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
sled-search = "0.2"
